# bio-adapt

./: .gitignore  CMakeLists.txt  README.md
resources/: knowledge.json  resources.qrc
src/: ChartsWidget.cpp  ChartsWidget.h  KnowledgeBase.cpp  KnowledgeBase.h  MainWindow.cpp  MainWindow.h  ScienceSimWidget.cpp  ScienceSimWidget.h  Tardigrade.cpp  Tardigrade.h  VisualSimWidget.cpp  VisualSimWidget.h  main.cpp
